--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@ endif()
 # Option to control ability to install the library
 option(random_INSTALL "Install the Random Number Library" ON)
 
+# Determine whether clang-tidy will be performed
+option(random_CLANG_TIDY "Use clang-tidy to perform linting during build" OFF)
+
 add_subdirectory(dependencies)
 add_subdirectory(src)
 
